<resources>
    <string name="app_name">My Pet</string>
    <string name="bottom_navigation_map">Map</string>
    <string name="bottom_navigation_profile">Profile</string>
    <string name="bottom_navigation_pet_detail">Pet</string>
    <string name="bottom_navigation_reminder">Reminder</string>
    <string name="bottom_navigation_food">Food</string>
    <string name="bottom_sheet_app_bar_button_ok">Set</string>
    <string name="fab_content_description">Add</string>
    <string name="toolbar_save">Save</string>
    <string name="pet_detail_empty">Pet is not found</string>
    <string name="pet_detail_age_title">Age</string>
    <string name="pet_detail_weight_title">Weight</string>
    <string name="pet_detail_breed_name_title">Pet breed</string>
    <string name="pet_detail_food_title">Nutrition</string>
    <string name="pet_empty_text">Add a new pet with the button +</string>
    <string name="pet_toolbar_more">Pet menu</string>
    <string name="pet_action_menu_item_edit_pet">Edit</string>
    <string name="pet_action_menu_item_delete_pet">Delete</string>
    <string name="pet_list_title">My pets</string>
    <string name="pet_food_title">Feeding</string>
    <string name="pet_food_forward_title">All</string>
    <string name="pet_care_title">Care</string>
    <string name="pet_care_forward_title">All</string>
    <string name="pet_age_today">Born today</string>
    <string name="pet_age_day">day</string>
    <string name="pet_age_days_dnya">days</string>
    <string name="pet_age_days_dney">days</string>
    <string name="pet_age_year">year</string>
    <string name="pet_age_years_goda">years</string>
    <string name="pet_age_years_let">years</string>
    <string name="pet_age_month">month</string>
    <string name="pet_age_months_mesyaca">months</string>
    <string name="pet_age_months_mesyacev">months</string>
    <string name="pet_creation_pet_name">Pet\'s name*</string>
    <string name="pet_creation_date_of_birth">Date of birth</string>
    <string name="pet_creation_save">Save</string>
    <string name="pet_creation_weight">Weight</string>
    <string name="pet_creation_choose_pet_kind">Select pet\'s type*</string>
    <string name="pet_creation_choose_breed">Select pet\'s breed</string>
    <string name="pet_creation_sex_male">Male</string>
    <string name="pet_creation_sex_female">Female</string>
    <string name="pet_creation_fragment_name">Pet\'s information</string>
    <string name="pet_creation_fill_all_fields">Please fill out all fields*</string>
    <string name="pet_deletion_title">Delete pet</string>
    <string name="pet_deletion_message">Are you sure you want to delete your pet?</string>
    <string name="pet_deletion_button_accept_text">Yes</string>
    <string name="pet_deletion_button_cancel_text">No</string>
    <string name="pet_deletion_error">Deletion error</string>
    <string name="pet_deletion_successful">Deletion is successful</string>
    <string name="alarm_repeat_title">Repeat</string>
    <string name="alarm_repeat_once">Once</string>
    <string name="alarm_repeat_everyday">Every day</string>
    <string name="care_alarm_detail_ringtone_title">Ringtone</string>
    <string name="care_alarm_detail_vibration_title">Vibration</string>
    <string name="care_alarm_detail_delay_title">Postpone</string>
    <string name="care_alarm_detail_hint_mute">Mute</string>
    <string name="care_alarm_detail_notification_title">Notification</string>
    <string name="alarm_delay_message">Alarm is postponed</string>
    <string name="alarm_service_overlay_delay">Postpone</string>
    <string name="alarm_service_overlay_stop">Stop</string>
    <string name="alarm_repeat_chooser_none">Do not repeat</string>
    <string name="alarm_repeat_chooser_everyday">Daily</string>
    <string name="alarm_repeat_chooser_every_week">Weekly</string>
    <string name="alarm_repeat_chooser_every_month">Monthly</string>
    <string name="alarm_repeat_chooser_every_year">Annually</string>
    <string name="alarm_repeat_chooser_custom">Set up</string>
    <string name="alarm_information">To turn on the alarm, please allow the application to run on top of all windows.</string>
    <string name="alarm_access">Allow</string>
    <string name="alarm_intent_chooser_ringtone_picker_title">Chose the ringtone</string>
    <string name="alarm_notification_chanel_action_delay">Postpone</string>
    <string name="alarm_notification_chanel_action_stop">Stop</string>
    <string name="alarm_title">Alert</string>
    <string name="alarm_snippet_alert_notification">Reminders</string>
    <string name="alarm_snippet_alert_alarm">Alarm</string>
    <string name="alarm_monday">Monday</string>
    <string name="alarm_tuesday">Tuesday</string>
    <string name="alarm_wednesday">Wednesday</string>
    <string name="alarm_thursday">Thursday</string>
    <string name="alarm_friday">Friday</string>
    <string name="alarm_saturday">Saturday</string>
    <string name="alarm_sunday">Sunday</string>
    <string name="alarm_monday_short">Mo</string>
    <string name="alarm_tuesday_short">Tu</string>
    <string name="alarm_wednesday_short">We</string>
    <string name="alarm_thursday_short">Th</string>
    <string name="alarm_friday_short">Fr</string>
    <string name="alarm_saturday_short">Sa</string>
    <string name="alarm_sunday_short">Su</string>
    <string name="alarm_recycler_default">Alarm at 10:00</string>
    <string name="care_repeat_title">Repeat</string>
    <string name="care_repeat_description_none">Does not repeat</string>
    <string name="care_end_title">Ending</string>
    <string name="care_end_none">Never</string>
    <string name="care_end_after">After</string>
    <string name="care_end_times">times</string>
    <string name="care_food_title">Feeding</string>
    <string name="care_food_times">time(s)</string>
    <string name="care_bath_title">Bathing</string>
    <string name="care_medicine_title">Medicine</string>
    <string name="care_grooming_title">Grooming</string>
    <string name="care_training_title">Training</string>
    <string name="care_vaccination_title">Vaccination</string>
    <string name="care_vitamin_title">Vitamin</string>
    <string name="care_checkup_title">Check up</string>
    <string name="care_toothbrushing_title">Toothbrushing</string>
    <string name="care_combing_the_wool_title">Wool combing</string>
    <string name="care_against_fleas_and_ticks_title">Against fleas and ticks</string>
    <string name="care_against_worms_title">Against worms</string>
    <string name="care_walk_title">Walk</string>
    <string name="care_start_title">Start</string>
    <string name="care_time_default" translatable="false">10:10</string>
    <string name="care_date_default" translatable="false">10.10.2020</string>
    <string name="care_alarm_title">Reminders</string>
    <string name="care_date_picker_title">Set the date</string>
    <string name="care_time_picker_title">Set the time</string>
    <string name="care_recycler_alarm_recycler_add">Add reminder</string>
    <string name="care_repeat_end_after_times">after times</string>
    <string name="care_repeat_interval_description_day">Every day</string>
    <string name="care_repeat_interval_description_week">Every week</string>
    <string name="care_repeat_interval_description_month">Every month</string>
    <string name="care_repeat_interval_description_year">Every year</string>
    <string name="care_recycler_main_dose_hint">Dosage</string>
    <string name="care_recycler_main_note_hint">Notes</string>
    <string name="care_recycler_main_title_hint">Name</string>
    <string name="care_recycler_repeat_day_text">once per day</string>
    <string name="care_recycler_repeat_day_default" translatable="false">2</string>
    <string name="care_repeat_times_default" translatable="false">1</string>
    <string name="day">day</string>
    <string name="care_repeat_times">Repeats</string>
    <string name="care_repeat_end_times_default" translatable="false">1</string>
    <string name="care_alarm_chooser">Once per day</string>
    <string name="care_recycler_alarm_default" translatable="false">10:00</string>
    <string-array name="care_repeats">
        <item>every day</item>
        <item>every week</item>
        <item>every month</item>
        <item>every year</item>
    </string-array>
    <string name="food_add_alarm_title">Add</string>
    <string name="food_detail_title_hint">Reminder</string>
    <string name="food_detail_ration_hint">Diet</string>
    <string name="food_detail_repeat_disable">Disabled</string>
    <string-array name="food_interval">
        <item>time(s) per day</item>
        <item>every other day</item>
        <item>time(s) per month</item>
    </string-array>
    <string name="user_about">About</string>
    <string name="user_version_name">Version name</string>
    <string name="user_version_code">Version code</string>
    <string name="user_privacy">Privacy policy</string>
    <string name="user_preferences">Preferences</string>
    <string name="user_feedback">Feedback</string>
    <string name="user_feedback_choose_app">Choose an app to send your email to the developer</string>
    <string name="user_feedback_email_recipient" translatable="false">mypetappfeedback@gmail.com</string>
    <string name="user_feedback_email_error">Unable to send an email</string>
    <string name="user_button">Button</string>
    <string name="user_log_in">Account settings</string>
    <string name="login_prompt_email" translatable="false">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_action_sign_in">Sign in or sign up</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_invalid_email">Not a valid email</string>
    <string name="login_invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_button_sign_in_label">Sign in</string>
    <string name="login_button_create_user_label">Sign up</string>
    <string name="login_toolbar_title">Sign in / Sign up</string>
    <string name="login_button_sign_out_label">Sign out</string>
    <string name="login_signed_out">You are signed out!</string>
    <string name="preferences_theme">Application theme</string>
    <string name="preferences_light_theme">Light</string>
    <string name="preferences_dark_theme">Dark</string>
    <string name="preferences_system_theme">System</string>
    <string name="preferences_color">Color scheme</string>
    <string name="preferences_dynamic_color">Dynamic</string>
    <string name="preferences_default_color">Default</string>
    <string name="map_ok">OK</string>
    <string name="map_location_enabled">Location is enabled</string>
    <string name="map_location_disabled">Location is disabled</string>
    <string name="map_location_not_granted">Location access is not granted</string>
    <string name="map_allow_location">Please allow location access to find places nearby</string>
    <string name="map_location_is_off">Location service is turned off</string>
    <string name="map_turn_location_on">Location is unknown. Turn the location service on if you need to update your location.</string>
    <string name="map_geolocation_access">Geolocation access</string>
    <string name="map_need_access">Access to this device location is needed to find places of interest</string>
    <string name="map_allow_access">Allow access</string>
    <string name="map_deny_access">Deny access</string>
    <string name="map_search_button">Search Button</string>
    <string name="map_default_search">veterinary pharmacy</string>
    <string name="map_search_error">Search error, check your network connection</string>
    <string name="map_zoom_out">Zoom out</string>
    <string name="map_zoom_in">Zoom in</string>
    <string name="time_picker_title">Set time</string>
    <string name="month">month</string>
    <string name="week">week</string>
</resources>