<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/offset_16">

        <TextView
            android:id="@+id/textInputLayoutsCareRepeatIntervalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_24"
            android:text="@string/care_repeat_times"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutsCareRepeatIntervalTimes"
            style="@style/Theme.MyPet.TextInputLayout"
            android:layout_marginStart="@dimen/offset_8"
            android:layout_marginTop="@dimen/offset_8"
            android:maxEms="3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutsCareRepeatIntervalTitle"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutsCareRepeatIntervalTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextCareRepeatIntervalTimes"
                style="@style/Theme.MyPet.TextInputEditText"
                android:inputType="numberSigned"
                android:text="@string/care_repeat_times_default"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutsCareRepeatInterval"
            style="@style/Theme.MyPet.TextInputLayoutSpinner"
            android:layout_marginStart="@dimen/offset_16"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutsCareRepeatIntervalTimes"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutsCareRepeatIntervalTimes"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutsCareRepeatIntervalTimes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextCareRepeatInterval"
                style="@style/Theme.MyPet.TextInputEditTextPicker"
                android:text="@string/day" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupCareRepeatWeek"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_16"
            android:visibility="gone"
            app:chipSpacingHorizontal="@dimen/zero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutsCareRepeatIntervalTitle"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutsCareRepeatIntervalTimes"
            tools:visibility="visible">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCareRepeatMonday"
                style="@style/Theme.MyPet.ChipWeek"
                android:text="@string/alarm_monday_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCareRepeatTuesday"
                style="@style/Theme.MyPet.ChipWeek"
                android:text="@string/alarm_thursday_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCareRepeatWednesday"
                style="@style/Theme.MyPet.ChipWeek"
                android:text="@string/alarm_wednesday_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCareRepeatThursday"
                style="@style/Theme.MyPet.ChipWeek"
                android:text="@string/alarm_thursday_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCareRepeatFriday"
                style="@style/Theme.MyPet.ChipWeek"
                android:text="@string/alarm_friday_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCareRepeatSaturday"
                style="@style/Theme.MyPet.ChipWeek"
                android:text="@string/alarm_saturday_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCareRepeatSunday"
                style="@style/Theme.MyPet.ChipWeek"
                android:text="@string/alarm_sunday_short" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/radioGroupCareRepeatDetailEndTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_24"
            android:text="@string/care_end_title"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutsCareRepeatIntervalTitle"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupCareRepeatWeek" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutCareRepeatDetailEndNone"
            style="@style/Theme.MyPet.CareItemContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupCareRepeatDetailEndTitle">

            <RadioButton
                android:id="@+id/radioButtonCareRepeatDetailEndNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCareRepeatDetailEndNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/offset_8"
                android:text="@string/care_repeat_end_none"
                app:layout_constraintBottom_toBottomOf="@+id/radioButtonCareRepeatDetailEndNone"
                app:layout_constraintStart_toEndOf="@+id/radioButtonCareRepeatDetailEndNone"
                app:layout_constraintTop_toTopOf="@+id/radioButtonCareRepeatDetailEndNone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutCareRepeatDetailEndAfterTimes"
            style="@style/Theme.MyPet.CareItemContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCareRepeatDetailEndNone">

            <RadioButton
                android:id="@+id/radioButtonCareRepeatDetailEndAfterTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCareRepeatDetailEndAfterTimesTitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/offset_8"
                android:text="@string/care_repeat_end_times_title_1"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutsCareRepeatDetailEndAfterTimes"
                app:layout_constraintStart_toEndOf="@+id/radioButtonCareRepeatDetailEndAfterTimes"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutsCareRepeatDetailEndAfterTimes" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutsCareRepeatDetailEndAfterTimes"
                style="@style/Theme.MyPet.TextInputLayout"
                android:layout_marginStart="@dimen/offset_8"
                android:maxEms="3"
                app:layout_constraintBottom_toBottomOf="@+id/radioButtonCareRepeatDetailEndAfterTimes"
                app:layout_constraintStart_toEndOf="@+id/textViewCareRepeatDetailEndAfterTimesTitle1"
                app:layout_constraintTop_toTopOf="@+id/radioButtonCareRepeatDetailEndAfterTimes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextCareRepeatDetailEndAfterTimes"
                    style="@style/Theme.MyPet.TextInputEditText"
                    android:inputType="numberSigned"
                    android:text="@string/care_repeat_end_times_default" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewCareRepeatDetailEndAfterTimesTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/offset_8"
                android:text="@string/care_repeat_end_times_title_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textInputLayoutsCareRepeatDetailEndAfterTimes"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutsCareRepeatDetailEndAfterTimes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutCareRepeatDetailEndAfterDate"
            style="@style/Theme.MyPet.CareItemContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCareRepeatDetailEndAfterTimes">

            <RadioButton
                android:id="@+id/radioButtonCareRepeatDetailEndAfterDate"
                android:layout_width="wrap_content"
                android:clickable="false"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutsCareRepeatEndAfterDate"
                style="@style/Theme.MyPet.TextInputLayout"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/radioButtonCareRepeatDetailEndAfterDate"
                app:layout_constraintStart_toEndOf="@+id/radioButtonCareRepeatDetailEndAfterDate"
                app:layout_constraintTop_toTopOf="@+id/radioButtonCareRepeatDetailEndAfterDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextCareRepeatEndAfterDate"
                    style="@style/Theme.MyPet.TextInputEditTextPicker"
                    android:text="@string/care_date_default" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>